<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/cl_update_password"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:orientation="vertical">
    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_current_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/text_password_new"
                android:inputType="textPassword"
                android:textColor="@android:color/black"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_password_new_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/text_password_new_confirm"
                android:inputType="textPassword"
                android:textColor="@android:color/black"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_cancel"
                android:text="@string/text_cancel"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_save"
                android:text="@string/text_save"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
